changed the subtext color due to visibility issues

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --color-bg: rgba(3, 1, 44, 1);
   --color-blog: #042c54;
   --color-text: #dcdede;
-  --color-subtext: #ce3a8b;
+  --color-subtext: #8373e7;
   --color-footer: linear-gradient(
     11deg,
     rgba(18, 9, 76, 1) 0%,
